# madlib-cli

./: README.md  pyproject.toml
assets/: error_log.txt  final_text.txt  template.txt
madlib_cli/: madlib.py
tests/: test_madlib.py
